added org links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <!-- Navbar -->
     <nav>
-      <h2>Jeremy Lee</h2>
+      <h2 class="name-heading">Jeremy Lee</h2>
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
@@ -51,7 +51,7 @@
     <!-- Hero Section -->
     <section class="hero" id="about">
       <img
-        src="assets/images/hamster.jpg"
+        src="assets/images/memoji.png"
         alt="pic of me"
         loading="lazy"
         class="hero-img"
@@ -60,16 +60,52 @@
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
           Hello and welcome to my personal portfolio website! <br />
-          Currently:
         </p>
+        <h4>Currently:</h4>
         <ul class="dot-points">
-          <li>Bachelor of Computer Science @ UNSW</li>
-          <li>Software Engineer Intern @ Optus</li>
-          <li>IT Subcommittee @ UNSW Digital Society</li>
+          <li>
+            <p style="display: inline">Bachelor of Computer Science</p>
+            <a
+              class="org-link"
+              href="https://au.linkedin.com/school/unsw/"
+              target="_blank"
+            >
+              @UNSW</a
+            >
+          </li>
+          <li>
+            <p style="display: inline">Software Engineer Intern</p>
+            <a
+              class="org-link"
+              href="https://au.linkedin.com/company/optus"
+              target="_blank"
+            >
+              @Optus</a
+            >
+          </li>
+          <li>
+            <p style="display: inline">IT Subcommittee</p>
+            <a
+              class="org-link"
+              href="https://www.unswdigitalsociety.org/about"
+              target="_blank"
+            >
+              @UNSW Digital Society</a
+            >
+          </li>
         </ul>
-        <p class="bio-text">Upcoming:</p>
+        <h4>Upcoming:</h4>
         <ul class="dot-points">
-          <li>UG Software Engineer @ Sunswift Racing</li>
+          <li>
+            <p style="display: inline">UG Software Engineer</p>
+            <a
+              class="org-link"
+              href="https://www.sunswift.com/"
+              target="_blank"
+            >
+              @Sunswift Racing</a
+            >
+          </li>
           <li>More experience :)</li>
         </ul>
       </div>
