added hero text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!--CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
+    
 
     <!-- Favicons -->
     <link
@@ -50,13 +51,22 @@
 
     <!-- Hero Section -->
     <section class="hero" id="about">
+      <div class="fade-text-from-left">
+        <msg>HI THERE 👋 I'M</msg>
+        <h1>Jeremy Lee</h1>
+        <h3 style="padding-top: 20px;">STUDENT 👨‍🎓 + DEVELOPER 👨‍💻</h3>
+        <p >I'm a creative thinker, passionate to learn more about UX/UI and Product Design!</p>
+      </div>
       <img
         src="assets/images/memoji.png"
         alt="pic of me"
         loading="lazy"
         class="hero-img"
       />
-      <div class="bio animate__animated animate__shakeX">
+    </section>
+
+    <section class="hero">
+      <div class="bio">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
           Hello and welcome to my personal portfolio website! <br />
@@ -110,7 +120,6 @@
         </ul>
       </div>
     </section>
-
     <!-- More about -->
 
     <!-- Skills section -->
