added updated memoji + social links

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="hero" id="about">
       <section class="hero-left">
         <div class="fade-text-from-left">
-          <div>
+          <div style="padding-top: 20px;">
             <msg>HELLO! </msg>
             <img 
               src="assets/images/wave.png" 
@@ -84,25 +84,36 @@
               class="profession-emojis"
             />
           </div> -->
-          <p >I'm a creative thinker 🧠, passionate to learn about UX/UI 📱 and Product Design 🧪!</p>
+          <p style="line-height: 2em;">I'm a creative thinker 🧠, passionate to learn about UX/UI 📱 and Product Design 🧪!</p>
         </div>
         <div class="hero-social-links">
-          <h3>yes</h3>
-          <h3>yes</h3>
-
-          <h3>yes</h3>
+          <a href="https://www.linkedin.com/in/jeremylee7/"
+            target="_blank">
+            <img class="hero-social-icons" src="assets/images/linkedin.png" alt="linkedin logo" >
+          </a>
+          <a href="https://github.com/jeremylee34"
+            target="_blank">
+            <img class="hero-social-icons" src="assets/images/github.png" alt="github logo" >
+          </a>
+          <a href="http://jeremyl.me/assets/images/jeremy-lee-cv.pdf"
+            target="_blank">
+            <img class="hero-social-icons" src="assets/images/resume.png" alt="resume icon" >
+          </a>
 
         </div>
       </section>
       <img
-        src="assets/images/memoji.png"
+        src="assets/images/memoji-with-stickers.png"
         alt="pic of me"
         loading="lazy"
         class="hero-img"
       />
+
+      <img src="assets/images/hero-bg.png" alt="hero bg pattern" loading="lazy" class="hero-bg">
+
     </section>
 
-    <!-- <section class="hero">
+    <section class="hero">
       <div class="bio">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
@@ -156,7 +167,7 @@
           <li>More experience :)</li>
         </ul>
       </div>
-    </section> -->
+    </section>
     <!-- More about -->
 
     <!-- Skills section -->
@@ -184,4 +195,5 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
   </body>
+
 </html>
