added section placeholders

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
               loading="lazy"
               class="wave-animation"
             />
-              
             <msg> I'M</msg>
           </div>
           
@@ -113,7 +112,7 @@
 
     </section>
 
-    <section class="hero">
+    <!-- <section class="hero">
       <div class="bio">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
@@ -167,8 +166,25 @@
           <li>More experience :)</li>
         </ul>
       </div>
-    </section>
+    </section> -->
     <!-- More about -->
+    <section class="more-about">
+      <h2>More About Me</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        autem deleniti cupiditate molestias quis unde quae totam porro dicta
+        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
+        nostrum dolor minus, libero delectus praesentium perferendis
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
+        consequuntur labore? Ea totam voluptas amet!
+      </p>
+    </section>
 
     <!-- Skills section -->
 
@@ -181,6 +197,15 @@
     <!-- Scroll to top -->
 
     <!-- Footer section -->
+    <section class="footer">
+      <h2>Footer</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        autem deleniti cupiditate molestias quis unde quae totam porro dicta
+        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      </p>
+    </section>
 
     <!-- Website scripts -->
     <script src="assets/js/app.js"></script>
