--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <nav>
       <h2 class="name-heading">Jeremy Lee</h2>
       <ul class="navigation">
-        <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="#" class="nav-link">About</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
         <li><a href="#blog" class="nav-link">Blog</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -112,7 +112,7 @@
 
     </section>
 
-    <!-- <section class="hero">
+    <section class="hero">
       <div class="bio">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
@@ -163,13 +163,51 @@
               @Sunswift Racing</a
             >
           </li>
+          <li>
+            <p style="display: inline">IT Director</p>
+            <a
+              class="org-link"
+              href="https://www.unswdigitalsociety.org/about"
+              target="_blank"
+            >
+              @UNSW Digital Society</a
+            >
+          </li>
           <li>More experience :)</li>
         </ul>
       </div>
-    </section> -->
+    </section>
     <!-- More about -->
     <section class="more-about">
       <h2>More About Me</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        autem deleniti cupiditate molestias quis unde quae totam porro dicta
+        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
+        nostrum dolor minus, libero delectus praesentium perferendis
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
+        consequuntur labore? Ea totam voluptas amet!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        autem deleniti cupiditate molestias quis unde quae totam porro dicta
+        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
+        nostrum dolor minus, libero delectus praesentium perferendis
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
+        consequuntur labore? Ea totam voluptas amet!
+      </p>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
         nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
