gradient bg + social  links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body>
     <!-- Navbar -->
     <nav>
-      <h2 class="name-heading">Jeremy Lee</h2>
+      <h2 class="name-heading"><a href="https://jeremyl.me">Jeremy Lee</a></h2>
       <ul class="navigation">
         <li><a href="#" class="nav-link">About</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
@@ -98,7 +98,10 @@
             target="_blank">
             <img class="hero-social-icons" src="assets/images/resume.png" alt="resume icon" >
           </a>
-
+          <a href="mailto: jeremy.lee6857@gmail.com"
+            target="_blank">
+            <img class="hero-social-icons" src="assets/images/email.png" alt="email icon" >
+          </a>
         </div>
       </section>
       <img
@@ -108,7 +111,7 @@
         class="hero-img"
       />
 
-      <img src="assets/images/hero-bg.png" alt="hero bg pattern" loading="lazy" class="hero-bg">
+      <!-- <img src="assets/images/hero-bg.png" alt="hero bg pattern" loading="lazy" class="hero-bg"> -->
 
     </section>
 
@@ -235,15 +238,34 @@
     <!-- Scroll to top -->
 
     <!-- Footer section -->
-    <section class="footer">
-      <h2>Footer</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-      </p>
-    </section>
+    <footer class="contact" id="contact">
+      <div class="contact-social-links">
+        <a href="https://open.spotify.com/user/egzgqd1rtehhu6m7d604qz42q?si=cf3bda32d4f2490c"
+            target="_blank">
+            <img src="assets/images/spotify.png" alt="spotify icon" >
+        </a>
+        <a href="https://www.linkedin.com/in/jeremylee7/"
+            target="_blank">
+            <img src="assets/images/linkedin_box.png" alt="linkedin icon" >
+        </a>
+        <a href="https://www.facebook.com/dosirac1/"
+            target="_blank">
+            <img src="assets/images/facebook.png" alt="facebook icon" >
+        </a>
+        <a href="https://www.instagram.com/dosirac7/"
+            target="_blank">
+            <img src="assets/images/instagram.png" alt="instagram icon" >
+        </a>
+        <a href="https://github.com/jeremylee34"
+            target="_blank">
+            <img src="assets/images/github_box.png" alt="resume icon" >
+        </a>
+      </div>
+      <p>© Jeremy Lee 2022</p>
+
+    </footer>
+
+    
 
     <!-- Website scripts -->
     <script src="assets/js/app.js"></script>
