added  return to top button

--- a/index.html
+++ b/index.html
@@ -236,7 +236,6 @@
     <!-- Social accounts - Fixed to the right -->
 
     <!-- Scroll to top -->
-
     <!-- Footer section -->
     <footer class="contact" id="contact">
       <div class="contact-social-links">
@@ -265,6 +264,11 @@
 
     </footer>
 
+
+    <!-- Return to top button -->
+    <img src="assets/images/return-to-top.png" alt="to top" onclick="topFunction()" id="returnToTop" title="Go to top">
+
+
     
 
     <!-- Website scripts -->
@@ -280,5 +284,5 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
   </body>
-
+  
 </html>
