added hamburger responsivenes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="assets/css/memoji-sticker-hd" />
 
     <!--CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -117,10 +118,10 @@
 
     <section class="hero">
       <div class="bio">
-        <h2 class="bio-title">About Me</h2>
+        <!-- <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
           Hello and welcome to my personal portfolio website! <br />
-        </p>
+        </p> -->
         <h4>Currently:</h4>
         <ul class="dot-points">
           <li>
@@ -182,49 +183,14 @@
     </section>
     <!-- More about -->
     <section class="more-about">
-      <h2>More About Me</h2>
+      <h2>About Me</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
         nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
         autem deleniti cupiditate molestias quis unde quae totam porro dicta
         iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
       </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-        nostrum dolor minus, libero delectus praesentium perferendis
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-        consequuntur labore? Ea totam voluptas amet!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-        nostrum dolor minus, libero delectus praesentium perferendis
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-        consequuntur labore? Ea totam voluptas amet!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-        nostrum dolor minus, libero delectus praesentium perferendis
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-        consequuntur labore? Ea totam voluptas amet!
-      </p>
+      
     </section>
 
     <!-- Skills section -->
@@ -259,6 +225,10 @@
             target="_blank">
             <img src="assets/images/github_box.png" alt="resume icon" >
         </a>
+        <a href="mailto: jeremy.lee6857@gmail.com"
+            target="_blank">
+            <img src="assets/images/mail.png" alt="email icon" >
+          </a>
       </div>
       <p>© Jeremy Lee 2022</p>
 
