added wavy effect and fixed flex rows at footer

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               class="profession-emojis"
             />
           </div> -->
-          <p style="line-height: 2em;">I'm a creative thinker 🧠, passionate to learn about UX/UI 📱 and Product Design 🧪!</p>
+          <p class="hero-p">I'm a creative thinker 🧠, passionate to learn about UX/UI 📱 and Product Design 🧪!</p>
         </div>
         <div class="hero-social-links">
           <a href="https://www.linkedin.com/in/jeremylee7/"
@@ -116,12 +116,14 @@
 
     </section>
 
-    <section class="hero">
+    <div class="spacer layer1"></div>
+
+    <!-- <section class="hero">
       <div class="bio">
-        <!-- <h2 class="bio-title">About Me</h2>
+        <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
           Hello and welcome to my personal portfolio website! <br />
-        </p> -->
+        </p>
         <h4>Currently:</h4>
         <ul class="dot-points">
           <li>
@@ -180,7 +182,8 @@
           <li>More experience :)</li>
         </ul>
       </div>
-    </section>
+    </section> -->
+    
     <!-- More about -->
     <section class="more-about">
       <h2>About Me</h2>
