trimmed waves + added cirlce crosshair

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
     />
   </head>
   <body>
+    <div id="circle"></div>
     <!-- Navbar -->
     <nav>
-      <h2 class="name-heading"><a href="https://jeremyl.me">Jeremy Lee</a></h2>
+      <h2 class="name-heading"><a href="#">Jeremy Lee</a></h2>
       <ul class="navigation">
-        <li><a href="#" class="nav-link">About</a></li>
+        <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
         <li><a href="#blog" class="nav-link">Blog</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -51,7 +52,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero" id="about">
+    <section class="hero" >
       <section class="hero-left">
         <div class="fade-text-from-left">
           <div style="padding-top: 20px;">
@@ -185,8 +186,38 @@
     </section> -->
     
     <!-- More about -->
-    <section class="more-about">
+    <section class="more-about" id="about">
       <h2>About Me</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        autem deleniti cupiditate molestias quis unde quae totam porro dicta
+        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        autem deleniti cupiditate molestias quis unde quae totam porro dicta
+        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        autem deleniti cupiditate molestias quis unde quae totam porro dicta
+        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        autem deleniti cupiditate molestias quis unde quae totam porro dicta
+        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        autem deleniti cupiditate molestias quis unde quae totam porro dicta
+        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      </p>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
         nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
@@ -246,7 +277,7 @@
 
     <!-- Website scripts -->
     <script src="assets/js/app.js"></script>
-
+    
     <!-- Ion icons scripts -->
     <script
       type="module"
