--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
     <div id="circle"></div>
     <!-- Navbar -->
     <nav>
-      <h2 class="name-heading"><a href="#">Jeremy Lee</a></h2>
+      <a href="#">
+        <img src="assets/images/logo.png" class="nav-logo" alt="logo">
+      </a>
+
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
