added bookshelve with responsiveness

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   </head>
   <body>
     <div id="circle"></div>
+      <!-- Return to top button -->
+    <img src="assets/images/return-to-top.png" alt="to top" onclick="topFunction()" id="returnToTop" title="Go to top">
     <!-- Navbar -->
     <nav>
       <a href="#">
@@ -46,6 +48,7 @@
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="#bookshelf" class="nav-link">Bookshelf</a></li>
         <li><a href="#blog" class="nav-link">Blog</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
@@ -234,6 +237,16 @@
 
     <!-- Projects section -->
 
+    <!-- Bookshelf section -->
+    <section class="bookshelf" id="bookshelf">
+      <div class="bookshelf-bg">
+        <img src="./assets/images/shelf-1.png" alt="bookshelf">
+        <img src="./assets/images/shelf-2.png" alt="bookshelf">
+        <img src="./assets/images/shelf-3.png" alt="bookshelf">
+
+      </div>
+    </section>
+
     <!-- Contact section -->
 
     <!-- Social accounts - Fixed to the right -->
@@ -272,8 +285,7 @@
     </footer>
 
 
-    <!-- Return to top button -->
-    <img src="assets/images/return-to-top.png" alt="to top" onclick="topFunction()" id="returnToTop" title="Go to top">
+  
 
 
     
