added 404 and changed hero theme to white

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <img src="assets/images/return-to-top.png" alt="to top" onclick="topFunction()" id="returnToTop" title="Go to top">
     <!-- Navbar -->
     <nav>
-      <a href="#">
+      <a href="https://jeremyl.me">
         <img src="assets/images/logo.png" class="nav-logo" alt="logo">
       </a>
 
