--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
       href="https://assets.stickpng.com/images/58e383a9204d556bbd97b149.png"
     />
   </head>
-  <body>
+  <body class="body-404">
     <div id="circle"></div>
     <!-- Navbar -->
     <nav>
@@ -55,6 +55,7 @@
       </button>
     </nav>
 
+    
     <section class="not-found">
         <h1>404 Page Not Found</h1>
         <img src="./assets/images/sad-memoji.PNG" alt="sad memoji">
@@ -63,7 +64,7 @@
 
    
     <!-- Footer section -->
-    <footer class="contact" id="contact">
+    <footer class="contact-404" id="contact-404">
       <div class="contact-social-links">
         <a href="https://open.spotify.com/user/egzgqd1rtehhu6m7d604qz42q?si=cf3bda32d4f2490c"
             target="_blank">
