added nav padding and fixed cursor for mobile size

--- a/index.html
+++ b/index.html
@@ -233,9 +233,19 @@
       
     </section>
 
-    <!-- Skills section -->
+
+    <!-- spacer between more-about and projects -->
+    <div class="spacer layer2"></div>
+
+    <section class="projects" id="projects">
+      <h2 style="padding: 3rem 3rem 10rem 3rem; display:flex;justify-content:center;">Projects</h2>
+    </section>
 
     <!-- Projects section -->
+
+    
+    <!-- spacer between projects and bookshelfs -->
+    <div class="spacer layer3"></div>
 
     <!-- Bookshelf section -->
     <section class="bookshelf" id="bookshelf">
