added nav link underlink animation

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       </a>
 
       <ul class="navigation">
-        <li><a href="#about" class="nav-link">About</a></li>
-        <li><a href="#projects" class="nav-link">Projects</a></li>
-        <li><a href="#bookshelf" class="nav-link">Bookshelf</a></li>
-        <li><a href="#blog" class="nav-link">Blog</a></li>
-        <li><a href="#contact" class="nav-link">Contact</a></li>
+        <li class="nav-link"><a href="#about" >About</a></li>
+        <li class="nav-link"><a href="#projects" >Projects</a></li>
+        <li class="nav-link"><a href="#bookshelf" >Bookshelf</a></li>
+        <li class="nav-link"><a href="#blog" >Blog</a></li>
+        <li class="nav-link"><a href="#contact" >Contact</a></li>
       </ul>
       <button class="burger-menu" id="burger-menu">
         <ion-icon class="bars" name="menu-outline"></ion-icon>
