updated burger menu on mobile

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <img src="assets/images/return-to-top-emoji.png" alt="to top" onclick="topFunction()" id="returnToTop" title="Go to top">
     <!-- Navbar -->
     <nav>
-      <a href="https://jeremyl.me">
+      <a class="nav-logo-a" href="https://jeremyl.me">
         <img src="assets/images/logo.png" class="nav-logo" alt="logo">
       </a>
 
@@ -49,7 +49,7 @@
         <li class="nav-link"><a href="#about" >About</a></li>
         <li class="nav-link"><a href="#projects" >Projects</a></li>
         <li class="nav-link"><a href="#bookshelf" >Bookshelf</a></li>
-        <li class="nav-link"><a href="#blog" >Blog</a></li>
+        <li class="nav-link"><a href="#photos" >Photos</a></li>
         <li class="nav-link"><a href="#contact" >Contact</a></li>
       </ul>
       <button class="burger-menu" id="burger-menu">
