--- a/index.html
+++ b/index.html
@@ -120,8 +120,42 @@
       />
 
       <!-- <img src="assets/images/hero-bg.png" alt="hero bg pattern" loading="lazy" class="hero-bg"> -->
+    </section>
+
+    <section class="hero-circle-bg">
+      <div class="hero-circle-1"></div>
+      <div class="hero-circle-2"></div>
+      <div class="hero-circle-3"></div>
+      <div class="hero-circle-4"></div>
+      <div class="hero-circle-5"></div>
+      <div class="hero-circle-6"></div>
+      <div class="hero-circle-7"></div>
+      <div class="hero-circle-8"></div>
+      <div class="hero-circle-9"></div>
+      <div class="hero-circle-10"></div>
+
+
+
+
+
+
+
+
+      <!-- <div class="hero-circles-right"></div>
+
+      <div class="hero-circles"></div>
+      <div class="hero-circles-right"></div>
+
+      <div class="hero-circles"></div>
+
+      <div class="hero-circles-right"></div>
+      <div class="hero-circles"></div>
+
+      <div class="hero-circles-right"></div> -->
+
 
     </section>
+
 
     <div class="spacer layer1"></div>
 
