--- a/index.html
+++ b/index.html
@@ -228,42 +228,91 @@
     <!-- More about -->
     <section class="more-about" id="about">
       <h2>About Me</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-      </p>
+
+      <div class="about-container">
+
+        <div class="about-bio">
+          <p>Hi 👋, my name is Jeremy and I am a young aspiring learner, with a passion for <strong>Software Engineering</strong> and <strong>Design</strong>.</p>
+          <p>I am currently:</p>
+          <ul class="dot-points">
+            <li>
+              <p style="display: inline">Studying Computer Science</p>
+              <a
+                class="org-link"
+                href="https://au.linkedin.com/school/unsw/"
+                target="_blank"
+              >
+                @ UNSW</a
+              >
+            </li>
+            <li>
+              <p style="display: inline">Software Engineer Intern</p>
+              <a
+                class="org-link"
+                href="https://au.linkedin.com/company/optus"
+                target="_blank"
+              >
+                @ Optus</a
+              >
+            </li>
+            <li>
+              <p style="display: inline">Undergrad Software Engineer</p>
+              <a
+                class="org-link"
+                href="https://www.sunswift.com/"
+                target="_blank"
+              >
+                @ Sunswift Racing</a
+              >
+            </li>
+            <li>
+              <p style="display: inline">IT Subcommittee</p>
+              <a
+                class="org-link"
+                href="https://www.unswdigitalsociety.org/about"
+                target="_blank"
+              >
+                @ UNSW Digital Society</a
+              >
+            </li>
+          </ul>
+          <p>In my free time I like to:</p>
+          <ul class="dot-points">
+            <li>
+              <p style="display: inline">Read Books 📚</p>
+ 
+            </li>
+            <li>
+              <p style="display: inline">Lift Weights 🏋️‍♂️</p>
+      
+            </li>
+            <li>
+              <p style="display: inline">Walk my dog 🐕</p>
+
+            </li>
+            <li>
+              <p style="display: inline">Play Games 👾</p>
+
+            </li>
+          </ul>
+
+        </div>
+
+        <div class="about-org-logos">
+          <img src="./assets/images/optus.png" alt="optus logo">
+          <img src="./assets/images/unsw.png" alt="unsw logo">
+          <img src="./assets/images/sunswift.png" alt="sunswift logo">
+          <img src="./assets/images/digisoc.png" alt="digisoc logo">
+        </div>
+
+        <div class="about-pic">
+          <img src="./assets/images/portrait.png" alt="portrait">
+        </div>
+
+
+      </div>
+
+
       
     </section>
 
