added mobile responsivity for about me

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               class="profession-emojis"
             />
           </div> -->
-          <p class="hero-p">I'm a creative thinker 🧠, passionate to learn about UX/UI 📱 and Product Design 🧪!</p>
+          <p class="hero-p">I'm a creative thinker 🧠, passionate to learn about <strong>UX/UI</strong> 📱 and <strong>Product Design</strong> 🧪!</p>
         </div>
         <div class="hero-social-links">
           <a href="https://www.linkedin.com/in/jeremylee7/"
