--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             target="_blank">
             <img class="hero-social-icons" src="assets/images/github.png" alt="github logo" >
           </a>
-          <a href="http://jeremyl.me/assets/images/jeremy-lee-cv.pdf"
+          <a href="http://jeremyl.me/assets/images/Jeremy Lee CV 2023.pdf"
             target="_blank">
             <img class="hero-social-icons" src="assets/images/resume.png" alt="resume icon" >
           </a>
